fix shelf box readability on mobile screens

--- a/app/modules/shelves/scss/_shelf_box.scss
+++ b/app/modules/shelves/scss/_shelf_box.scss
@@ -47,12 +47,21 @@
     .picture{
       margin-top: 1em
     }
-    #shelf-title-bar{
-      @include display-flex(column, center, center);
-      margin-bottom: 0.7em;
-    }
     #shelf-info-box{
       text-align: center;
+      #shelf-title-bar{
+        @include display-flex(column, center, center);
+        margin-bottom: 0.7em;
+        #shelf-actions{
+          a {
+            margin-left: 0;
+          }
+          #unselectShelf{
+            display: none;
+          }
+          @include display-flex(column, center, center);
+        }
+      }
     }
     .data{
       @include display-flex(column, center, center);
